# llm-guided-hard-neg-mining-for-low-resource-entity-norm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/splits/: split_stats.json
results/: baselines.csv  epoch_sweep.csv  m3_results.csv
scripts/: generate_negatives.py  plot_epoch_sweep.py  plot_paper_figures.py  prepare_data.py  run_baselines.py  sweep_epochs.py  test_wdc_prompts.py  train_with_hn.py
src/wdc_hn/: __init__.py
src/wdc_hn/baselines/: __init__.py  bi_encoder_in_batch.py  bm25.py
src/wdc_hn/data/: __init__.py  dataset.py  download.py  splits.py
src/wdc_hn/evaluation/: __init__.py  metrics.py
src/wdc_hn/generation/: __init__.py  generate_negatives.py  prompts.py
src/wdc_hn/utils/: __init__.py  logging.py
tests/: test_dataset.py  test_metrics.py  test_splits.py
