[project]
name = "wdc-hn"
version = "0.1.0"
description = "LLM-Guided Hard Negative Mining for Dense Retrieval & Entity Linking — Milestone 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.19.0",
    "accelerate>=0.29.0",
    # Data / numerics
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pyarrow>=15.0.0",
    # Vector search (for ANCE-style mining in later milestones)
    "faiss-cpu>=1.8.0",
    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    # Evaluation
    "evaluate>=0.4.0",
    "openai>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wdc_hn"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
